remove map on mobile, add forgot password link, move map stylesheet to .css stylesheet, fix route when logging into non-existent account.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -52,6 +52,35 @@ body {
     border: 0;
 }
 
+#map {
+
+    width: 100%;
+    height: 400px;
+}
+
+@media (max-width: 768px) {
+    #map {
+        display: none;
+    }
+}
+
+.marker {
+    background-image: url('/images/mapbox-icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
 
 
 /*CUSTOM STYLESHEETS*/
